# serializer version: 1
# name: TestCreateKey.test_ok[does_not_have_permission][data]
  dict({
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': list([
      dict({
        'id': 2,
        'legacy_id': None,
        'name': 'architects',
      }),
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'musicians',
      }),
    ]),
    'id': 1,
    'name': 'Foo',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
  })
# ---
# name: TestCreateKey.test_ok[does_not_have_permission][mongo]
  dict({
    '_id': 'baz',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': list([
      2,
      1,
    ]),
    'id': 1,
    'name': 'Foo',
    'permissions': dict({
      'create_sample': True,
      'modify_subtraction': True,
    }),
    'user': dict({
      'id': 1,
    }),
  })
# ---
# name: TestCreateKey.test_ok[does_not_have_permission][pg]
  list([
    dict({
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'hashed': 'baz',
      'id': 1,
      'name': 'Foo',
      'permissions': dict({
        'create_sample': True,
        'modify_subtraction': True,
      }),
      'user_id': 1,
    }),
  ])
# ---
# name: TestCreateKey.test_ok[has_permission][data]
  dict({
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': list([
      dict({
        'id': 2,
        'legacy_id': None,
        'name': 'architects',
      }),
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'musicians',
      }),
    ]),
    'id': 1,
    'name': 'Foo',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': True,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
  })
# ---
# name: TestCreateKey.test_ok[has_permission][mongo]
  dict({
    '_id': 'baz',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': list([
      2,
      1,
    ]),
    'id': 1,
    'name': 'Foo',
    'permissions': dict({
      'create_sample': True,
      'modify_subtraction': True,
    }),
    'user': dict({
      'id': 1,
    }),
  })
# ---
# name: TestCreateKey.test_ok[has_permission][pg]
  list([
    dict({
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'hashed': 'baz',
      'id': 1,
      'name': 'Foo',
      'permissions': dict({
        'create_sample': True,
        'modify_subtraction': True,
      }),
      'user_id': 1,
    }),
  ])
# ---
